# mz-data-council-2023

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  compose.yaml  profiles.yml  pyproject.toml
dbt/: .env  profiles.yml
dbt/macros/: init_connections.sql
dbt/models/sources/: items.sql  purchases.sql
macros/: delete_connections.sql  init_connections.sql
models/sources/: items.sql  purchases.sql
