[tool.poetry]
name = "mz-data-council-2023"
version = "0.1.0"
description = ""
authors = ["Dennis Hume <dennis@materialize.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-materialize = "1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
